--- a/my_normalize/my_normalize.ipynb
+++ b/my_normalize/my_normalize.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "3c334b19",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "e72f08e6",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "1ca90865",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,6 @@
     "            {\"Author_id\": author_to_id[author_name], \"Isbn\": isbn10}\n",
     "        )\n",
     "\n",
-    "# Write authors.csv\n",
     "with open(\"./normalized_data/authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Author_id\", \"Name\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
@@ -187,7 +186,6 @@
     "    for name, author_id in sorted(author_to_id.items(), key=lambda x: x[1]):\n",
     "        writer.writerow({\"Author_id\": author_id, \"Name\": name})\n",
     "\n",
-    "# Write book_authors.csv (with Author_ID instead of Author_Name)\n",
     "with open(\"./normalized_data/book_authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Author_id\", \"Isbn\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
@@ -213,12 +211,12 @@
    "id": "cefb3783",
    "metadata": {},
    "source": [
-    "Anyway, borrowers doesn't need to be normalized, and it should be backwards-compatible with the borrower schema in the diagram in the instructions. I'm also not required to merge the first and last names into a single name attribute, so I should be good to just copy it directly."
+    "Anyway, borrowers doesn't need to be normalized, I just need to combine and rename some attributes. In future milestones I'm guessing we'll add a table to store which books each borrower has currently checked out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "62517060",
    "metadata": {},
    "outputs": [],
@@ -259,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "2b7e2faa",
    "metadata": {},
    "outputs": [],
    "source": [
     "rows = []\n",
     "\n",
-    "with open(\"./intermediate_data/books_1nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./intermediate_data/book_2nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
