--- a/normalization/my_normalize.ipynb
+++ b/normalization/my_normalize.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "3c334b19",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "\n",
     "normalized_rows = []\n",
     "\n",
-    "with open(\"./original_data/books.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/original/books.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f, delimiter=\"\\t\")\n",
     "\n",
     "    for row in reader:\n",
@@ -45,7 +45,7 @@
     "            }\n",
     "            normalized_rows.append(normalized_row)\n",
     "\n",
-    "with open(\"./intermediate_data/books_1nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
+    "with open(\"./data/intermediate/books_1nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"ISBN10\", \"ISBN13\", \"Title\", \"Author\", \"Cover\", \"Publisher\", \"Pages\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "e72f08e6",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
     "books = {}  # ISBN10 -> book data\n",
     "book_authors = []  # list of (ISBN10, Author) pairs\n",
     "\n",
-    "with open(\"./intermediate_data/books_1nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/intermediate/books_1nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
@@ -104,7 +104,7 @@
     "        # Add book-author relationship\n",
     "        book_authors.append({\"ISBN10\": isbn10, \"Author\": row[\"Author\"]})\n",
     "\n",
-    "with open(\"./intermediate_data/book_2nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
+    "with open(\"./data/intermediate/book_2nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"ISBN10\", \"ISBN13\", \"Title\", \"Cover\", \"Publisher\", \"Pages\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
@@ -112,7 +112,7 @@
     "    writer.writerows(books.values())\n",
     "\n",
     "with open(\n",
-    "    \"./intermediate_data/book_authors_2nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\"\n",
+    "    \"./data/intermediate/book_authors_2nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\"\n",
     ") as f:\n",
     "    fieldnames = [\"ISBN10\", \"Author\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "1ca90865",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
     "\n",
     "book_author_relationships = []\n",
     "\n",
-    "with open(\"./intermediate_data/book_authors_2nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/intermediate/book_authors_2nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
@@ -178,7 +178,7 @@
     "            {\"Author_id\": author_to_id[author_name], \"Isbn\": isbn10}\n",
     "        )\n",
     "\n",
-    "with open(\"./normalized_data/authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
+    "with open(\"./data/normalized/authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Author_id\", \"Name\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
@@ -186,7 +186,7 @@
     "    for name, author_id in sorted(author_to_id.items(), key=lambda x: x[1]):\n",
     "        writer.writerow({\"Author_id\": author_id, \"Name\": name})\n",
     "\n",
-    "with open(\"./normalized_data/book_authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
+    "with open(\"./data/normalized/book_authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Author_id\", \"Isbn\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
@@ -216,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "62517060",
    "metadata": {},
    "outputs": [],
    "source": [
     "rows = []\n",
     "\n",
-    "with open(\"original_data/borrowers.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"data/original/borrowers.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
@@ -239,7 +239,7 @@
     "            }\n",
     "        )\n",
     "\n",
-    "with open(\"normalized_data/borrower.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
+    "with open(\"data/normalized/borrower.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Card_id\", \"Ssn\", \"Bname\", \"Address\", \"Phone\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
@@ -257,20 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "2b7e2faa",
    "metadata": {},
    "outputs": [],
    "source": [
     "rows = []\n",
     "\n",
-    "with open(\"./intermediate_data/book_2nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/intermediate/book_2nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
     "        rows.append({\"Isbn\": row[\"ISBN10\"], \"Title\": row[\"Title\"].strip().title()})\n",
     "\n",
-    "with open(\"./normalized_data/book.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
+    "with open(\"./data/normalized/book.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Isbn\", \"Title\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
@@ -281,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "normalization",
    "language": "python",
    "name": "python3"
   },
