Use ISBN13s instead of ISBN10s

--- a/normalization/my_normalize.ipynb
+++ b/normalization/my_normalize.ipynb
@@ -70,29 +70,31 @@
     "- {ISBN10} → ISBN13, Title, Cover, Publisher, Pages\n",
     "- {ISBN13} → ISBN10, Title, Cover, Publisher, Pages\n",
     "\n",
-    "This is because Title, Cover, Publisher, and Pages are all non-key attributes, but they each depend on ISBN10 and also depend on ISBN13, and {ISBN10} and {ISBN13} are both proper subsets of the candidate keys `{ISBN10, Author}` and `{ISBN13, Author}`."
+    "This is because Title, Cover, Publisher, and Pages are all non-key attributes, but they each depend on ISBN10 and also depend on ISBN13, and {ISBN10} and {ISBN13} are both proper subsets of the candidate keys `{ISBN10, Author}` and `{ISBN13, Author}`.\n",
+    "\n",
+    "We'll use ISBN13 as the primary key going forward."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e72f08e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use sets to track unique books and book-author pairs\n",
-    "books = {}  # ISBN10 -> book data\n",
-    "book_authors = []  # list of (ISBN10, Author) pairs\n",
+    "books = {}  # ISBN13 -> book data\n",
+    "book_authors = []  # list of (ISBN13, Author) pairs\n",
     "\n",
     "with open(\"./data/intermediate/books_1nf.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
-    "        isbn10 = row[\"ISBN10\"]\n",
+    "        isbn13 = row[\"ISBN13\"]\n",
     "\n",
-    "        # Add book if we haven't seen this ISBN10 before\n",
-    "        if isbn10 not in books:\n",
-    "            books[isbn10] = {\n",
+    "        # Add book if we haven't seen this ISBN13 before\n",
+    "        if isbn13 not in books:\n",
+    "            books[isbn13] = {\n",
     "                \"ISBN10\": row[\"ISBN10\"],\n",
     "                \"ISBN13\": row[\"ISBN13\"],\n",
     "                \"Title\": row[\"Title\"],\n",
@@ -102,7 +104,7 @@
     "            }\n",
     "\n",
     "        # Add book-author relationship\n",
-    "        book_authors.append({\"ISBN10\": isbn10, \"Author\": row[\"Author\"]})\n",
+    "        book_authors.append({\"ISBN13\": isbn13, \"Author\": row[\"Author\"]})\n",
     "\n",
     "with open(\"./data/intermediate/book_2nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"ISBN10\", \"ISBN13\", \"Title\", \"Cover\", \"Publisher\", \"Pages\"]\n",
@@ -114,7 +116,7 @@
     "with open(\n",
     "    \"./data/intermediate/book_authors_2nf.csv\", \"w\", encoding=\"utf-8\", newline=\"\"\n",
     ") as f:\n",
-    "    fieldnames = [\"ISBN10\", \"Author\"]\n",
+    "    fieldnames = [\"ISBN13\", \"Author\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
     "    writer.writeheader()\n",
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1ca90865",
    "metadata": {},
    "outputs": [],
@@ -166,7 +168,7 @@
     "\n",
     "    for row in reader:\n",
     "        author_name = row[\"Author\"]\n",
-    "        isbn10 = row[\"ISBN10\"]\n",
+    "        isbn13 = row[\"ISBN13\"]\n",
     "\n",
     "        # Assign ID to new authors\n",
     "        if author_name not in author_to_id:\n",
@@ -175,7 +177,7 @@
     "\n",
     "        # Store book-author relationship with Author_ID\n",
     "        book_author_relationships.append(\n",
-    "            {\"Author_id\": author_to_id[author_name], \"Isbn\": isbn10}\n",
+    "            {\"Author_id\": author_to_id[author_name], \"Isbn\": isbn13}\n",
     "        )\n",
     "\n",
     "with open(\"./data/normalized/authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2b7e2faa",
    "metadata": {},
    "outputs": [],
@@ -268,7 +270,7 @@
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
-    "        rows.append({\"Isbn\": row[\"ISBN10\"], \"Title\": row[\"Title\"].strip().title()})\n",
+    "        rows.append({\"Isbn\": row[\"ISBN13\"], \"Title\": row[\"Title\"].strip().title()})\n",
     "\n",
     "with open(\"./data/normalized/book.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "    fieldnames = [\"Isbn\", \"Title\"]\n",
