Update column names

--- a/normalization/my_normalize.ipynb
+++ b/normalization/my_normalize.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "3c334b19",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e72f08e6",
    "metadata": {},
    "outputs": [],
@@ -177,19 +177,19 @@
     "\n",
     "        # Store book-author relationship with Author_ID\n",
     "        book_author_relationships.append(\n",
-    "            {\"Author_id\": author_to_id[author_name], \"Isbn\": isbn13}\n",
+    "            {\"author_id\": author_to_id[author_name], \"book_isbn13\": isbn13}\n",
     "        )\n",
     "\n",
     "with open(\"./data/normalized/authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
-    "    fieldnames = [\"Author_id\", \"Name\"]\n",
+    "    fieldnames = [\"id\", \"name\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
     "    writer.writeheader()\n",
-    "    for name, author_id in sorted(author_to_id.items(), key=lambda x: x[1]):\n",
-    "        writer.writerow({\"Author_id\": author_id, \"Name\": name})\n",
+    "    for name, id in sorted(author_to_id.items(), key=lambda x: x[1]):\n",
+    "        writer.writerow({\"id\": id, \"name\": name})\n",
     "\n",
     "with open(\"./data/normalized/book_authors.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
-    "    fieldnames = [\"Author_id\", \"Isbn\"]\n",
+    "    fieldnames = [\"author_id\", \"book_isbn13\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
     "    writer.writeheader()\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "62517060",
    "metadata": {},
    "outputs": [],
@@ -231,18 +231,18 @@
     "    for row in reader:\n",
     "        rows.append(\n",
     "            {\n",
-    "                \"Card_id\": row[\"ID0000id\"],\n",
-    "                \"Ssn\": row[\"ssn\"],\n",
-    "                \"Bname\": \" \".join([row[\"first_name\"], row[\"last_name\"]])\n",
+    "                \"card_id\": row[\"ID0000id\"],\n",
+    "                \"ssn\": row[\"ssn\"],\n",
+    "                \"name\": \" \".join([row[\"first_name\"], row[\"last_name\"]])\n",
     "                .strip()\n",
     "                .title(),\n",
-    "                \"Address\": \", \".join([row[\"address\"], row[\"city\"], row[\"state\"]]),\n",
-    "                \"Phone\": row[\"phone\"],\n",
+    "                \"address\": \", \".join([row[\"address\"], row[\"city\"], row[\"state\"]]),\n",
+    "                \"phone_number\": row[\"phone\"],\n",
     "            }\n",
     "        )\n",
     "\n",
     "with open(\"data/normalized/borrower.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
-    "    fieldnames = [\"Card_id\", \"Ssn\", \"Bname\", \"Address\", \"Phone\"]\n",
+    "    fieldnames = [\"card_id\", \"ssn\", \"name\", \"address\", \"phone_number\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
     "    writer.writeheader()\n",
@@ -270,10 +270,10 @@
     "    reader = csv.DictReader(f)\n",
     "\n",
     "    for row in reader:\n",
-    "        rows.append({\"Isbn\": row[\"ISBN13\"], \"Title\": row[\"Title\"].strip().title()})\n",
+    "        rows.append({\"isbn13\": row[\"ISBN13\"], \"title\": row[\"Title\"].strip().title()})\n",
     "\n",
     "with open(\"./data/normalized/book.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
-    "    fieldnames = [\"Isbn\", \"Title\"]\n",
+    "    fieldnames = [\"isbn13\", \"title\"]\n",
     "    writer = csv.DictWriter(f, fieldnames=fieldnames)\n",
     "\n",
     "    writer.writeheader()\n",
