Make sure author list for each book is unique

--- a/normalization/my_normalize.ipynb
+++ b/normalization/my_normalize.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3c334b19",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "    reader = csv.DictReader(f, delimiter=\"\\t\")\n",
     "\n",
     "    for row in reader:\n",
-    "        authors = [author.strip() for author in row[\"Author\"].split(\",\")]\n",
+    "        authors = {author.strip() for author in row[\"Author\"].split(\",\")}\n",
     "\n",
     "        for author in authors:\n",
     "            normalized_row = {\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "e72f08e6",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1ca90865",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "62517060",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2b7e2faa",
    "metadata": {},
    "outputs": [],
